--- a/construction-app/client/package.json
+++ b/construction-app/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "date-holidays": "^3.16.10",
     "flowbite": "^1.5.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
