--- a/construction-app/client/package.json
+++ b/construction-app/client/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.8.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.1",
