--- a/construction-app/server/construction-app-api/build.gradle
+++ b/construction-app/server/construction-app-api/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework:spring-context'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
