+comments, moving email related stuff to properties and small changes to calendar logic.

--- a/construction-app/server/construction-app-api/src/main/resources/application.properties
+++ b/construction-app/server/construction-app-api/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/construction_system
 spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+email-host=smtp.gmail.com
+email-port=587
 app-email=bitsapp.noreply@gmail.com
 app-email-password=ymzoeqcigwllloca
