--- a/construction-app/server/construction-app-api/build.gradle
+++ b/construction-app/server/construction-app-api/build.gradle
@@ -4,8 +4,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+group = 'bits'
 sourceCompatibility = '11'
 
 configurations {
