--- a/construction-app/server/construction-app-api/src/main/resources/application.properties
+++ b/construction-app/server/construction-app-api/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/construction_system
+spring.datasource.url=jdbc:postgresql://dpg-ces94r9a6gdggmjrji4g-a.frankfurt-postgres.render.com/bits_db?user=root&password=8MQVbgOf0ivszxOC12cFfDOiwlSdy2r2
 spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=8MQVbgOf0ivszxOC12cFfDOiwlSdy2r2
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 email-host=smtp.gmail.com
