--- a/construction-app/server/construction-app-api/Dockerfile
+++ b/construction-app/server/construction-app-api/Dockerfile
@@ -2,6 +2,7 @@ FROM eclipse-temurin:17-jdk-alpine AS build
 COPY gradle gradle
 COPY build.gradle settings.gradle gradlew ./
 COPY src src
+RUN chmod +x gradlew
 RUN ./gradlew build
 
 FROM eclipse-temurin:17-jdk-alpine
