--- a/construction-app/server/construction-app-api/src/main/resources/application.properties
+++ b/construction-app/server/construction-app-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/construction_system
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://179.61.219.55/bits_db
+spring.datasource.username=bits_admin
+spring.datasource.password=M!yM@hL2s%^*7Lv0
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
