--- a/construction-app/server/construction-app-api/src/main/resources/application.properties
+++ b/construction-app/server/construction-app-api/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/construction_system
-spring.datasource.username=root
-spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://localhost:3306/construction_system
+#spring.datasource.username=root
+#spring.datasource.password=password
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASSWORD}
 
 jwt.access.key=q3r6s5v9w1x2y7z8m4n0o1p5k6l2j3h7g8d0e5f9b2c1t4u6i8
 jwt.access.duration=1
