--- a/construction-app/server/construction-app-api/src/main/resources/application.properties
+++ b/construction-app/server/construction-app-api/src/main/resources/application.properties
@@ -1,6 +1,18 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/construction_system
-spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+#logging.level.org.hibernate.type.descriptor.sql=trace
+
+jwt.access.key=${JWT_ACCESS_KEY}
+jwt.access.duration=${JWT_ACCESS_DURATION}
+
+jwt.refresh.key=${JWT_REFRESH_KEY}
+jwt.refresh.duration=${JWT_REFRESH_DURATION}
+
+email.host=${EMAIL_HOST}
+email.port=${EMAIL_PORT}
+app.email=${APP_EMAIL}
+app.email.password=${APP_EMAIL_PASSWORD}
