--- a/construction-app/server/construction-app-api/.dockerignore
+++ b/construction-app/server/construction-app-api/.dockerignore
@@ -2,6 +2,7 @@
 !build/libs/dependency/BOOT-INF/lib
 !build/libs/dependency/BOOT-INF/classes
 !build/libs/dependency/META-INF
+!build/libs/*.jar
 
 !gradlew
 !gradle
